Fixed issue where exposeAsXML() was letting ordered elements clobber each other if they shared a key (they now are listed in alpha order at the given key).